@@ -28,51 +28,32 @@ public class Controller {
     private LinkedList<Button> auxList = new LinkedList<>();
     private double items = 0;
 
-    /**
-     * @param event
-     */
     @FXML
     public void insert(ActionEvent event) {
         if (!listCopy.getChildren().isEmpty()) {
-            ((Button) listCopy.getChildren().get(0)).setBackground(new Background(
-                    new BackgroundFill(colorPicker.getValue(), null, null)));
+            ((Button) listCopy.getChildren().get(0)).setBackground(new Background(new BackgroundFill(
+                    colorPicker.getValue(), null, null)));
 
-            int listSize = 0;
-            listSize = linkedList.size();
-            System.out.println("size lista: " + linkedList.size());
-            for (int i = 0; i < listSize; i++) {
-                if (((Button) linkedList.getFirst()).getBackground().getFills().get(0).getFill().equals(colorPickerSearch.getValue())) {
-                    System.out.println("Size lista aux: " + auxList.size());
-                    for (int j = 0; j < i; j++) {
-                        System.out.println(((Button) linkedList.getFirst()).getBackground().getFills().get(0).getFill());
-                        linkedList.addFirst((Button) auxList.getFirst());
-                        auxList.removeStart();
-                    }
-                    System.out.println("post size: " + linkedList.size());
-                    linkedList.add((Button) listCopy.getChildren().get(0), i);
-                    list.getChildren().add(i, listCopy.getChildren().get(0));
+            for (int i = 0; i < linkedList.size(); i++) {
+                if ((linkedList.get(i)).getBackground().getFills().get(0).getFill().equals(colorPickerSearch.getValue())) {
+                    Button b = (Button) listCopy.getChildren().get(0);
+                    linkedList.add(b, i);
+                    list.getChildren().add(i, b);
                     textAreaActions.setText(textAreaActions.getText() + " Se inserto el color: " +
                             colorPickerSearch.getValue() + "\n");
                     break;
-                } else {
-                    auxList.addFirst(linkedList.getFirst());
-                    linkedList.removeStart();
-                    System.out.println(((Button) auxList.getFirst()).getBackground().getFills().get(0).getFill());
                 }
             }
         }
     }
 
-    /**
-     * @param event
-     */
     @FXML
     public void remove(ActionEvent event) {
         if (!list.getChildren().isEmpty()) {
             position.setMax(items--);
 
             for (int i = 0; i < linkedList.size(); i++) {
-                if (((Button) linkedList.getFirst()).getBackground().getFills().get(0).getFill().equals(colorPickerSearch.getValue())) {
+                if ((linkedList.getFirst()).getBackground().getFills().get(0).getFill().equals(colorPickerSearch.getValue())) {
                     for (int j = 0; j < i; j++) {
                         linkedList.addFirst(auxList.getLast());
                         auxList.removeFinal();
@@ -92,25 +73,19 @@ public class Controller {
         }
     }
 
-    /**
-     * @param event
-     */
     @FXML
     public void insertStart(ActionEvent event) {
         if (!listCopy.getChildren().isEmpty()) {
             ((Button) listCopy.getChildren().get(0)).setBackground(new Background(
                     new BackgroundFill(colorPicker.getValue(), null, null)));
             linkedList.addFirst((Button) listCopy.getChildren().get(0));
-            System.out.println("Agregado: " + ((Button) linkedList.getFirst()).getBackground().getFills().get(0).getFill());
+            System.out.println("Agregado: " + (linkedList.getFirst()).getBackground().getFills().get(0).getFill());
             list.getChildren().add(0, listCopy.getChildren().get(0));
             textAreaActions.setText(textAreaActions.getText() + " Se inserto al inicio el color: " +
                     colorPicker.getValue() + "\n");
         }
     }
 
-    /**
-     * @param event
-     */
     @FXML
     public void insertEnd(ActionEvent event) {
         if (!listCopy.getChildren().isEmpty()) {
@@ -124,9 +99,6 @@ public class Controller {
         }
     }
 
-    /**
-     * @param event
-     */
     @FXML
     public void removeFirst(ActionEvent event) {
         if (!list.getChildren().isEmpty()) {
@@ -138,9 +110,6 @@ public class Controller {
         }
     }
 
-    /**
-     * @param event
-     */
     @FXML
     public void removeEnd(ActionEvent event) {
         if (!list.getChildren().isEmpty()) {
